plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	//spring boot
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'org.springframework.boot:spring-boot-starter-web-services'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//lombok
	implementation 'org.projectlombok:lombok:1.18.22'
	annotationProcessor 'org.projectlombok:lombok'
	compileOnly 'org.projectlombok:lombok'

	//security - jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	implementation 'com.auth0:java-jwt:4.2.1'

	//oauth(소셜 로그인)
	//implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'


	//Cannot resolve symbol 'NotBlank'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// swagger 사용
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

	// maria db
	implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.4'

	// aws s3
	implementation 'software.amazon.awssdk:s3:2.20.35'
	implementation 'software.amazon.awssdk:auth:2.20.35'
}

tasks.named('test') {
	useJUnitPlatform()
}
